# mcp-market

./: .gitignore  CLAUDE.md  NOTE.md  README.md  package.json
backend/: package.json
backend/data/: .gitkeep
backend/src/: app.ts  index.ts
backend/src/controllers/: mcpController.ts  proxyController.ts
backend/src/db/: database.ts  (+1 more)
backend_python/: .gitignore  API.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
backend_python/src/: main.py
backend_python/src/db/: database.py  migrate.py  schema.sql
backend_python/src/middleware/: proxy_auth.py
backend_python/src/routes/: mcp.py  proxy.py  proxy_path.py
backend_python/src/services/: http_to_mcp_adapter.py  mcp_proxy_service.py  mcp_service.py  mcp_session_service.py  mcp_test_service.py
backend_python/src/types/: mcp.py
backend_python/tests/: README.md  TEST_GUIDE.md  __init__.py  test_connection.py  test_mcp_api.py  test_operations.py  test_path_prefix.py  test_proxy_path.py  test_session.py
docs/: plan.md
examples/: README.md
examples/1-mcp-servers/: README.md
examples/2-mcp-clients/: README.md
examples/3-agent-integration/: README.md
examples/4-http-to-mcp/: README.md  custom-api-template.json  github-api-mapping.json  openai-api-mapping.json  weather-api-mapping.json
examples/agent-demo/: .env.example  README.md  requirements.txt
examples/mcp-server/: README.md  pyproject.toml
examples/mcp-server/src/: server.py
examples/mcp-server/src/tools/: calculator.py  weather.py
frontend/: index.html  package.json
frontend/src/: App.tsx
verified_examples/: README.md
(+57 files in other folders)
